Rewrite to use Maven

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="height:100%;">
     <div class="d-flex flex-column h-100" style="margin-top:12rem;">
-        <h2 class="text-center font-weight-bold mt-4">Scrabble Score</h2>
+        <h2 class="text-center font-weight-bold mt-4">Scrabble Score 2.0</h2>
         <form class="w-25 mx-auto mt-3 word-form" action="http://localhost:8080/score" method="get">
             <div class="form-group">
                 <label for="word" class="font-weight-bolder">Enter Your Word:</label>
